app-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: snowflake-id-generator
spec:
  containers:
  - image: snowflake-id-generator:0.0.1
    name: snowflake-id-generator
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
